--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,10 +3,8 @@ body {
 }
 
 .container {
-  /* margin-top: 2rem; */
-  /* border: 1px solid red; */
-  background-color: rgb(255, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
